<?xml version="1.0"?>
<package format="2">
  <name>g2o_catkin</name>
  <version>0.0.1</version>
  <description>g2o_catkin</description>
  
  <author email="xiangyu002@e.ntu.edu.sg">Xiangyu Liu</author>
  
  <maintainer email="xiangyu002@e.ntu.edu.sg">Xiangyu Liu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>

</package>
